--- a/styles.css
+++ b/styles.css
@@ -464,7 +464,8 @@ body {
 
 .showcase-visual {
     position: relative;
-    min-height: 500px;
+    display: flex;
+    align-items: center;
 }
 
 .product-display {
